--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mobile",
+  "slug": "mobile",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -12,6 +13,8 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "dotenv": "^16.0.3",
     "expo": "~47.0.3",
     "expo-status-bar": "~1.4.2",
     "native-base": "^3.4.21",
