--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "mobile",
-    "slug": "mobile",
+    "name": "Jogo da Memoria",
+    "slug": "jogo-da-memoria",
+    "scheme": "jogo-da-memoria",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
