--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mobile",
-  "slug": "mobile",
+  "name": "jogo-da-memoria",
+  "slug": "jogo-da-memoria",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -13,10 +13,14 @@
     "@expo-google-fonts/inter": "^0.2.2",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "axios": "^1.1.3",
     "babel-plugin-inline-dotenv": "^1.7.0",
     "dotenv": "^16.0.3",
     "expo": "~47.0.3",
+    "expo-auth-session": "~3.7.2",
+    "expo-random": "~13.0.0",
     "expo-status-bar": "~1.4.2",
+    "expo-web-browser": "~12.0.0",
     "native-base": "^3.4.21",
     "phosphor-react-native": "^1.1.2",
     "react": "18.1.0",
@@ -24,14 +28,19 @@
     "react-native": "0.70.5",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.9"
+    "react-native-svg": "^13.4.0",
+    "react-native-web": "~0.18.9",
+    "undefined": "expo-auth-session/providers/google"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "react-native-svg-transformer": "^1.0.0",
     "typescript": "^4.6.3"
+  },
+  "overrides": {
+    "react": "18.1.0"
   },
   "private": true
 }
